Extracted information to a separate file

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
         <p>&copy; 2025 Soumyadeep Das</p>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="script.js" type="module"></script>
     
     <!-- Schema.org structured data for improved SEO -->
     <script type="application/ld+json">
