Added a sideprojects page.

--- a/index.html
+++ b/index.html
@@ -43,6 +43,14 @@
                 <a href="https://github.com/shadowlanes" target="_blank" class="contact-link" aria-label="GitHub Profile" rel="noopener"><i class="fab fa-github"></i><span class="sr-only">GitHub</span></a>
                 <a href="resume.pdf" target="_blank" class="cv-link" aria-label="Download CV">CV</a>
             </div>
+            <div class="nav-menu">
+                <div class="dropdown">
+                    <button class="dropdown-btn">More</button>
+                    <div class="dropdown-content">
+                        <a href="/sideprojects.html">Side Projects</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </header>
 
